traefik/sub-domain-ingress-update/04_deployment.yml
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: traefik-auth
          secret:
            secretName: traefik-dashboard-auth
      containers:
      - name: traefik
        image: "traefik:1.7"
        volumeMounts:
          - mountPath: "/etc/traefik/config"
            name: config
          - name: traefik-auth
            mountPath: "/etc/traefik/auth/"
            readOnly: true
        args:
        - --configfile=/etc/traefik/config/traefik.toml
        - --api
        - --logLevel=DEBUG
