traefik/sub-domain-ingress-update/05_service.yml
# Declare Traefik ingress service
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - port: 80
      name: http
    - port: 8080
      name: admin
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - port: 8080
      name: dashboard
